--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "author": "Tim Schindler",
   "keywords": ["multi", "process", "cluster"],
   "dependencies": {
+    "redis":          "0.7.2",
     "coffee-script":  "1.3.3",
     "async":          "0.1.22",
     "underscore":     "1.4.2",
-    "optimist":       "0.3.4",
-    "configr": "git+ssh://git@github.com:zyndiecate/configr#0.1.0"
+    "optimist":       "0.3.4"
   },
   "devDependencies": {
-    "jasmine-node": "1.0.21",
-    "jasmine-reporters": "0.1.0"
+    "jasmine-node": "1.0.21"
   },
   "engines": {
     "node": ">= 0.8.8"
