--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "optimist":       "0.3.4"
   },
   "devDependencies": {
-    "jasmine-node": "1.0.21"
+    "jasmine-node": "1.0.26"
   },
   "engines": {
     "node": ">= 0.8.8"
   },
   "scripts": {
-    "test": "node_modules/jasmine-node/bin/jasmine-node spec/"
+    "test": "node ./node_modules/jasmine-node/bin/jasmine-node --coffee spec/"
   }
 }
