--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "clustr",
+  "name": "clustr-node",
   "version": "0.1.0",
-  "description": "Cluster module to manage multi process cluster",
+  "description": "CoffeeScript cluster module to manage multi process cluster in NodeJs. Clustr is responseable for worker spawning and messaging between all processes.",
   "author": "Tim Schindler",
-  "keywords": ["multi", "process", "cluster"],
+  "keywords": ["multi", "process", "cluster", "coffeescript", "nodejs"],
   "dependencies": {
-    "redis":          "0.7.2",
-    "coffee-script":  "1.3.3",
-    "async":          "0.1.22",
-    "underscore":     "1.4.2",
-    "optimist":       "0.3.4"
+    "redis":         "0.7.2",
+    "coffee-script": "1.3.3",
+    "async":         "0.1.22",
+    "underscore":    "1.4.2",
+    "optimist":      "0.3.4"
   },
   "devDependencies": {
     "jasmine-node": "1.0.26"
