--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "dependencies": {
     "redis":         "0.7.2",
     "coffee-script": "1.3.3",
-    "async":         "0.1.22",
-    "underscore":    "1.4.2",
-    "optimist":      "0.3.4"
+    "underscore":    "1.4.2"
   },
   "devDependencies": {
     "jasmine-node": "1.0.26"
