--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "redis":         "0.7.2",
     "coffee-script": "1.3.3",
-    "underscore":    "1.4.2"
+    "underscore":    "1.4.2",
+    "node-uuid":     "1.3.3"
   },
   "devDependencies": {
     "jasmine-node": "1.0.26"
