--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "redis":         "0.7.2",
     "coffee-script": "1.3.3",
     "underscore":    "1.4.2",
+    "optimist":      "0.3.4",
     "node-uuid":     "1.3.3"
   },
   "devDependencies": {
